# py-utils

./: .gitignore  .pre-commit-config.yaml  .refactor-toolkit.yaml  README.md  SQLGLOT_INTEGRATION.md  TESTING.md  benchmark_sql_parsers.py  bigquery_users_schema.json  comparison1_final_fix.txt  comparison1_fixed.txt  comparison2_fixed.txt  final_comparison1.txt  final_comparison2.txt  full_output.txt  linkedin_member_us_snapshot_info.json  linkedin_member_us_snapshot_json_schema.json  linkedin_member_us_snapshot_schema.json  migration_analysis_summary.md  mypy.ini  pattern_config.json  pyproject.toml  quick_test.py  sample_data.json  test_bigquery_integration.py  test_bigquery_live.py  test_data.json  test_standard_json_schema.json
docs/: cli_format_redesign.md  mcp_server.md  migration_configuration.md  sqlglot_integration.md  test_organization.md
examples/: clean_architecture_config.json  hexagonal_architecture_config.json
refactor_toolkit/: .gitignore  .validation_cache.json  CI_CD_INTEGRATION.md  DESIGN_PATTERN_VALIDATION.md  LLM_PROMPT_OPTIMIZATION.md  PROMPT_LIBRARY_INDEX.md  QUICK_VALIDATION_PROMPTS.md  README.md  REFACTOR_VALIDATION_CHEATSHEET.md  TIME_BANDS_STANDARD.md  UNIVERSAL_AI_REFACTOR_PROMPT.md  UNIVERSAL_REFACTOR_CHECKLIST.md  UNIVERSAL_VALIDATION_PROMPTS.md  config.yaml  context_binding_schema.json  index.json  requirements.txt  smart_validation_runner.py  test_validate_patterns.py  validate  validate.py  validate_patterns.py  validate_quick.sh  validate_quick_enhanced.sh  validation_flows.yaml  validation_schema.yaml
refactor_toolkit/experimental/: AGENT_NAVIGATION_GUIDE.md  ANTI_PATTERN_CATALOG.md  ASSESSMENT_EXAMPLES.md  CI_CD_INTEGRATION.md  CONSOLIDATED_PROMPT_LIBRARY.md  OUTPUT_FIELD_DEFINITIONS.md  RESPONSE_BLUEPRINTS.md  context_binding_schema.json  index.json  pattern_validation_examples.md  smart_validation_runner.py  test_validate_patterns.py  validate_full.sh  validate_quick.sh  validate_quick_enhanced.sh  validation_flows.yaml  validation_schema.yaml
src/: bq_test.py  get_tables_ddl.py
src/schema_diff/: README.md  advanced_analytics.py  analyze_config.py  bigquery_api_json_parser.py  bigquery_ddl.py  bigquery_ddl_generator.py  bigquery_queries.py  bigquery_schema.py  bigquery_utils.py  bq_config.py  cli.py  cli_config.py  cli_ddl.py  cli_generate.py  cli_main.py  compare.py  config.py  constants.py  dbt_schema_parser.py  decorators.py  exceptions.py  format_resolver.py  gcs_utils.py  helpfmt.py  infer.py  io_utils.py  json_data_file_parser.py  json_schema_parser.py  loader.py  logging_config.py  migration_analyzer.py  models.py  normalize.py  output_utils.py  parser_factory.py  presence.py  protobuf_schema_parser.py  pytest.ini  report.py  sample_collector.py  (+9 more)
src/schema_diff/cli/: __init__.py  __main__.py  analyze.py  colors.py  compare.py  config.py  ddl.py  generate.py
tests/: conftest.py  test_dbt_parsers.py  test_main.py  test_protobuf_schema_parser.py  test_report.py  test_schema_from_data.py
tests/schema-diff/: conftest.py  test_analyze_command.py  test_any_mode.py  test_architectural_integration.py  test_auto_detection.py  test_bigquery_ddl.py  test_cli.py  test_cli_functional.py  test_cli_integration.py  test_cli_modules.py  test_compare.py  test_compare_presence  test_coverage_summary.md  test_dbt_model_parser.py  test_dbt_parsers.py  test_ddl_integration.py  test_decorators.py  test_enhanced_functionality.py  test_field_filtering.py  test_gcs_integration.py  test_io_utils.py  test_json_schema_parser.py  test_loader.py  test_migration_analysis.py  test_parser_factory.py  test_protobuf_schema_parser.py  test_report.py  test_schema_from_data.py  test_schema_generation_enhanced.py  test_spark_schema_parser.py  test_spark_sql_parsers.py  test_sql_schema_parser.py
