[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-diff"
version = "0.1.0"
description = "Diff schemas or sample data with helpful reports"
readme = "README.md"
requires-python = ">=3.9"

dependencies = ["ijson", "deepdiff", "pyyaml", "protobuf"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pydocstyle", # for docstring linting
]
bigquery = [
  "google-cloud-bigquery",
  "pygments",              # for SQL syntax highlighting
]
gcs = [
  "google-cloud-storage", # for GCS file download support
]
validation = [
  "sqlparse",   # for SQL DDL validation
  "jsonschema", # for JSON Schema validation
]
sqlglot = [
  "sqlglot[rs]>=25.0.0", # for enhanced SQL parsing & cross-dialect translation (with Rust tokenizer)
]
modern-cli = ["typer>=0.9.0", "rich>=13.0.0"]
models = ["pydantic>=2.0.0"]

[project.scripts]
schema-diff = "schema_diff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["schema_diff*"]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
namespace_packages = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["^schema-diff$", "tests/schema-diff/.*"]

# Gradually enable stricter checking
disallow_any_generics = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pydocstyle]
convention = "google"
add-ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in __init__
]
match = "(?!test_).*\\.py"
match-dir = "(?!tests).*"
